Fix code going out of viewport

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -54,7 +54,6 @@ $link-hover: darken($blue, 10%);
 pre code,
 code {
   color: $body-color;
-  white-space: pre;
   padding: 0 0.5rem;
   display: inline-block;
   background-color: #e5e5e5;
